# youtube_trends_platform

./: .dockerignore  .gitignore  README.md  docker-compose.yml  requirements.txt
.kafka_data/: meta.properties  recovery-point-offset-checkpoint  replication-offset-checkpoint
dashboards/: YouTube_Package.twbx
youtube_trends_project/: .env.example  README.md  config.py  kafka_producer.py  main.py  main_consumer.py  orchestrator.py  pyproject.toml  settings.py  spark_consumer.py  spark_schema.py  spark_session.py  test.py  youtube_client.py  youtube_client_pandas.py
youtube_trends_project/config/: __init__.py  app_settings.py  kafka_settings.py  spark_settings.py  youtube_settings.py
youtube_trends_project/tests/: test_kafka_producer.py  test_youtube_client.py
youtube_trends_project/youtube_trends/: __init__.py  app_container.py  main.py
youtube_trends_project/youtube_trends/domain/: __init__.py  category.py  comment.py  region.py  video.py
youtube_trends_project/youtube_trends/infrastructure/: __init__.py  youtube_client.py
youtube_trends_project/youtube_trends/infrastructure/kafka/: __init__.py  abstract_kafka_producer.py  json_kafka_producer.py
youtube_trends_project/youtube_trends/infrastructure/spark/: __init__.py  spark_schema_registry.py  spark_session_factory.py
youtube_trends_project/youtube_trends/jobs/: __init__.py  spark_check_videos.py
youtube_trends_project/youtube_trends/services/: __init__.py  base_ingestion_service.py  category_ingestion_service.py  comment_ingestion_service.py  region_ingestion_service.py  video_ingestion_service.py
(+884 files in other folders)
