[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-trends-project"
version = "0.1.0"
description = "YouTube Trends project: YouTube API -> Kafka producers -> PySpark checks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "kafka-python>=2.0.2",
    "pyspark>=3.5.0"
]
